{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 25,
  "lineage": "d88b570c-e2a5-9fb6-68a2-8884069406aa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "LEPROUT-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b9fc9b4861dc385",
            "domain": "vpc",
            "id": "eipalloc-01b9fc9b4861dc385",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-13-36-251-196.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.251.196",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "LEPROUT-INSTANCE-ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-092f952f414711ae9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-092f952f414711ae9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TSIEUDAT-KEYSSH",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-020538a8ad4d63dd4",
            "private_dns": "ip-10-0-1-56.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.56",
            "public_ip": "13.37.234.114",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0828888c99b12eaf0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0ab97d5e9de9ec05b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0efd8624a0132fca6",
            "tags": {
              "Name": "LEPROUT-INSTANCE-ADMIN"
            },
            "tags_all": {
              "Name": "LEPROUT-INSTANCE-ADMIN"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ab97d5e9de9ec05b"
            ]
          },
          "dependencies": [
            "aws_security_group.LEPROUT-SG-ADMIN",
            "aws_subnet.LEPROUT-PUB-SUBNET",
            "aws_vpc.LEPROUT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "LEPROUT-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:internet-gateway/igw-08fea9d31b76bd053",
            "id": "igw-08fea9d31b76bd053",
            "owner_id": "962615889483"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "LEPROUT-NAT-GTW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b9fc9b4861dc385",
            "association_id": "eipassoc-0c25109ed49e3868d",
            "connectivity_type": "public",
            "id": "nat-0cd43fc0285ccfab7",
            "network_interface_id": "eni-05c9296f35a4b9dd2",
            "private_ip": "10.0.1.99",
            "public_ip": "13.36.251.196",
            "subnet_id": "subnet-0efd8624a0132fca6",
            "tags": {
              "Name": "LEPROUT-NAT-GTW"
            },
            "tags_all": {
              "Name": "LEPROUT-NAT-GTW"
            }
          },
          "dependencies": [
            "aws_eip.LEPROUT-EIP",
            "aws_internet_gateway.LEPROUT-IGW",
            "aws_subnet.LEPROUT-PUB-SUBNET",
            "aws_vpc.LEPROUT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "LEPROUT-ROUTE-DEFAULT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08fea9d31b76bd053",
            "id": "r-rtb-0ae547a960415b1fb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ae547a960415b1fb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.LEPROUT-IGW",
            "aws_internet_gateway_attachment.LEPROUT-IGW-ATTACHMENT",
            "aws_vpc.LEPROUT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "LEPROUT-ROUTE-PRIV",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:route-table/rtb-0fe304758b1822b6d",
            "id": "rtb-0fe304758b1822b6d",
            "owner_id": "962615889483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cd43fc0285ccfab7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "LEPROUT-ROUTE-PRIV"
            },
            "tags_all": {
              "Name": "LEPROUT-ROUTE-PRIV"
            },
            "timeouts": null,
            "vpc_id": "vpc-0909497680467cbf2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.LEPROUT-EIP",
            "aws_internet_gateway.LEPROUT-IGW",
            "aws_nat_gateway.LEPROUT-NAT-GTW",
            "aws_subnet.LEPROUT-PUB-SUBNET",
            "aws_vpc.LEPROUT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "LEPROUT-ROUTE-PUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:route-table/rtb-0823101839c1d6be5",
            "id": "rtb-0823101839c1d6be5",
            "owner_id": "962615889483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08fea9d31b76bd053",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "LEPROUT-ROUTE1"
            },
            "tags_all": {
              "Name": "LEPROUT-ROUTE1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0909497680467cbf2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.LEPROUT-IGW",
            "aws_vpc.LEPROUT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "LEPROUT-RTB-ASSOC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031d1674886e30f03",
            "route_table_id": "rtb-0fe304758b1822b6d",
            "subnet_id": "subnet-07d42740103880546"
          },
          "dependencies": [
            "aws_eip.LEPROUT-EIP",
            "aws_internet_gateway.LEPROUT-IGW",
            "aws_nat_gateway.LEPROUT-NAT-GTW",
            "aws_route_table.LEPROUT-ROUTE-PRIV",
            "aws_subnet.LEPROUT-PRIV-SUBNET1",
            "aws_subnet.LEPROUT-PUB-SUBNET",
            "aws_vpc.LEPROUT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "LEPROUT-RTB-ASSOC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab31ac6b80bb4796",
            "route_table_id": "rtb-0fe304758b1822b6d",
            "subnet_id": "subnet-075b69403aa284cc3"
          },
          "dependencies": [
            "aws_eip.LEPROUT-EIP",
            "aws_internet_gateway.LEPROUT-IGW",
            "aws_nat_gateway.LEPROUT-NAT-GTW",
            "aws_route_table.LEPROUT-ROUTE-PRIV",
            "aws_subnet.LEPROUT-PRIV-SUBNET2",
            "aws_subnet.LEPROUT-PUB-SUBNET",
            "aws_vpc.LEPROUT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "LEPROUT-RTB-ASSOC3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3e75aeedd2e29fe",
            "route_table_id": "rtb-0fe304758b1822b6d",
            "subnet_id": "subnet-00cc155a6b556de76"
          },
          "dependencies": [
            "aws_eip.LEPROUT-EIP",
            "aws_internet_gateway.LEPROUT-IGW",
            "aws_nat_gateway.LEPROUT-NAT-GTW",
            "aws_route_table.LEPROUT-ROUTE-PRIV",
            "aws_subnet.LEPROUT-PRIV-SUBNET3",
            "aws_subnet.LEPROUT-PUB-SUBNET",
            "aws_vpc.LEPROUT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LEPROUT-SG-ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-0ab97d5e9de9ec05b",
            "description": "LEPROUT-SG-ADMIN",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab97d5e9de9ec05b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "LEPROUT-SG1-ALLOW-SSH-FROM-EXT",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "LEPROUT-SG-ADMIN",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LEPROUT-SG-ADMIN"
            },
            "tags_all": {
              "Name": "LEPROUT-SG-ADMIN"
            },
            "timeouts": null,
            "vpc_id": "vpc-0909497680467cbf2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.LEPROUT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LEPROUT-SG-PRIV-WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-076b39dd2bbb5ae5c",
            "description": "LEPROUT-SG-PRIV-WEB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076b39dd2bbb5ae5c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ALLOW-SSH-FROM-ADMIN-TO-PRIV",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ab97d5e9de9ec05b"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "LEPROUT-SG-ALLOW-WEB-TO-REVERSE",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0383432bb07739c75"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "LEPROUT-SG-PRIV-WEB",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LEPROUT-SG-PRIV-WEB"
            },
            "tags_all": {
              "Name": "LEPROUT-SG-PRIV-WEB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0909497680467cbf2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.LEPROUT-SG-ADMIN",
            "aws_security_group.LEPROUT-SG-REVERSE",
            "aws_vpc.LEPROUT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LEPROUT-SG-REVERSE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-0383432bb07739c75",
            "description": "LEPROUT-SG-REVERSE",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0383432bb07739c75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "LEPROUT-SG-ALLOW-WEB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "LEPROUT-SG-REVERSE-ALLOW-SSH-FROM-ADMIN",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ab97d5e9de9ec05b"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "LEPROUT-SG1",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LEPROUT-SG-REVERSE"
            },
            "tags_all": {
              "Name": "LEPROUT-SG-REVERSE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0909497680467cbf2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.LEPROUT-SG-ADMIN",
            "aws_vpc.LEPROUT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "LEPROUT-PRIV-SUBNET1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-07d42740103880546",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d42740103880546",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LEPROUT-PRIV-SUBNET1"
            },
            "tags_all": {
              "Name": "LEPROUT-PRIV-SUBNET1"
            },
            "vpc_id": "vpc-0909497680467cbf2"
          },
          "dependencies": [
            "aws_vpc.LEPROUT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "LEPROUT-PRIV-SUBNET2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-075b69403aa284cc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075b69403aa284cc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LEPROUT-PRIV-SUBNET2"
            },
            "tags_all": {
              "Name": "LEPROUT-PRIV-SUBNET2"
            },
            "vpc_id": "vpc-0909497680467cbf2"
          },
          "dependencies": [
            "aws_vpc.LEPROUT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "LEPROUT-PRIV-SUBNET3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-00cc155a6b556de76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cc155a6b556de76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LEPROUT-PRIV-SUBNET3"
            },
            "tags_all": {
              "Name": "LEPROUT-PRIV-SUBNET3"
            },
            "vpc_id": "vpc-0909497680467cbf2"
          },
          "dependencies": [
            "aws_vpc.LEPROUT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "LEPROUT-PUB-SUBNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0efd8624a0132fca6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efd8624a0132fca6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LEPROUT-PUB-SUBNET"
            },
            "tags_all": {
              "Name": "LEPROUT-PUB-SUBNET"
            },
            "vpc_id": "vpc-0909497680467cbf2"
          },
          "dependencies": [
            "aws_vpc.LEPROUT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "LEPROUT-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:vpc/vpc-0909497680467cbf2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0339c5d388df1cad8",
            "default_route_table_id": "rtb-0ae547a960415b1fb",
            "default_security_group_id": "sg-0155cb5eb10fbcfa6",
            "dhcp_options_id": "dopt-040e3fc8fa1640715",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0909497680467cbf2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ae547a960415b1fb",
            "owner_id": "962615889483",
            "tags": {
              "Name": "LEPROUT-VPC"
            },
            "tags_all": {
              "Name": "LEPROUT-VPC"
            }
          }
        }
      ]
    }
  ]
}